force-app/main/default/objects/Availability_Slot__c/Availability_Slot__c.object-meta.xml
<CustomObject>
    <label>Availability Slot</label>
    <nameField>
        <displayFormat>SLOT-{0000}</displayFormat>
        <label>Availability Slot Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Availability Slots</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>