force-app/main/default/objects/Availability_Slot__c/fields/Booked_Interview__c.field-meta.xml
<CustomField>
    <fullName>Booked_Interview__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Booked Interview</label>
    <referenceTo>Interview__c</referenceTo>
    <relationshipLabel>Availability Slots (Booked)</relationshipLabel>
    <relationshipName>Availability_Slots_Booked</relationshipName>
    <type>Lookup</type>
</CustomField>