force-app/main/default/objects/Availability_Slot__c/fields/Deactivated_Date__c.field-meta.xml
<CustomField>
    <fullName>Deactivated_Date__c</fullName>
    <description
  >Date when this availability window was deactivated (soft deleted). Null means active.</description>
    <label>Deactivated Date</label>
    <type>Date</type>
</CustomField>