force-app/main/default/objects/Availability_Slot__c/fields/Effective_From__c.field-meta.xml
<CustomField>
    <fullName>Effective_From__c</fullName>
    <description
  >The Monday of the week this recurring slot becomes effective. Slots only appear on weeks where Monday &gt;= this date.</description>
    <label>Effective From</label>
    <type>Date</type>
</CustomField>