force-app/main/default/objects/Availability_Slot__c/fields/End_DateTime__c.field-meta.xml
<CustomField>
    <fullName>End_DateTime__c</fullName>
    <label>End DateTime</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>