force-app/main/default/objects/Availability_Slot__c/fields/Interview_Stage__c.field-meta.xml
<CustomField>
    <fullName>Interview_Stage__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Interview Stage</label>
    <referenceTo>Interview_Stage__c</referenceTo>
    <relationshipLabel>Availability Slots</relationshipLabel>
    <relationshipName>Availability_Slots</relationshipName>
    <type>Lookup</type>
</CustomField>