force-app/main/default/objects/Availability_Slot__c/fields/Interviewer__c.field-meta.xml
<CustomField>
    <fullName>Interviewer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Interviewer</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Availability Slots</relationshipLabel>
    <relationshipName>Availability_Slots</relationshipName>
    <type>Lookup</type>
</CustomField>