force-app/main/default/objects/Availability_Slot__c/fields/Is_Blocked__c.field-meta.xml
<CustomField>
    <fullName>Is_Blocked__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True if the interviewer has marked this slot as unavailable (overrides recurring pattern)</description>
    <label>Is Blocked</label>
    <type>Checkbox</type>
</CustomField>