force-app/main/default/objects/Availability_Slot__c/fields/Is_Recurring__c.field-meta.xml
<CustomField>
    <fullName>Is_Recurring__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True if this slot represents a recurring weekly availability pattern</description>
    <label>Is Recurring</label>
    <type>Checkbox</type>
</CustomField>