force-app/main/default/objects/Availability_Slot__c/validationRules/Slot_Within_Stage_Window.validationRule-meta.xml
<ValidationRule>
    <fullName>Slot_Within_Stage_Window</fullName>
    <active>true</active>
    <description
  >Availability slot must fall within the Interview Stage start and end date window.</description>
    <errorConditionFormula>AND(
    NOT(ISBLANK(Interview_Stage__c)),
    NOT(ISBLANK(Start_DateTime__c)),
    NOT(ISBLANK(End_DateTime__c)),
    OR(
        DATEVALUE(Start_DateTime__c) &lt; Interview_Stage__r.Start_Date__c,
        DATEVALUE(End_DateTime__c) &gt; Interview_Stage__r.End_Date__c
    )
)</errorConditionFormula>
    <errorMessage
  >Availability slot must fall within the Interview Stage&apos;s Start Date and End Date window.</errorMessage>
</ValidationRule>